Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-24734

tst_qqmlproperty::crashOnValueProperty() test accesses deleted QML engine

    XMLWordPrintable

Details

    Description

      ==24322== Invalid read of size 4
      ==24322== at 0x407ABD4: QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> >::data() const (qscopedpointer.h:132)
      ==24322== by 0x40899F1: QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> >::pointer qGetPtrHelper<QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> > >(QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> > const&) (qglobal.h:1357)
      ==24322== by 0x408AFA9: QQmlEngine::d_func() (qqmlengine.h:131)
      ==24322== by 0x409AEE4: QQmlEnginePrivate::get(QQmlEngine*) (qqmlengine_p.h:485)
      ==24322== by 0x40B7A12: QQmlProperty::propertyTypeName() const (qqmlproperty.cpp:428)
      ==24322== by 0x8067DE5: tst_qqmlproperty::crashOnValueProperty() (tst_qqmlproperty.cpp:1556)
      ==24322== by 0x806B131: tst_qqmlproperty::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) (tst_qqmlproperty.moc:325)
      ==24322== by 0x55679F2: QMetaMethod::invoke(QObject*, Qt::ConnectionType, QGenericReturnArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument) const (qmetaobject.cpp:1642)
      ==24322== by 0x5566FA6: QMetaObject::invokeMethod(QObject*, char const*, Qt::ConnectionType, QGenericReturnArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument) (qmetaobject.cpp:1168)
      ==24322== by 0x47415B1: QMetaObject::invokeMethod(QObject*, char const*, Qt::ConnectionType, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument) (qobjectdefs.h:393)
      ==24322== by 0x473DACC: QTest::qInvokeTestMethodDataEntry(char*) (qtestcase.cpp:1533)
      ==24322== by 0x473E290: QTest::qInvokeTestMethod(char const*, char const*) (qtestcase.cpp:1650)
      ==24322== Address 0xb32a0e4 is 4 bytes inside a block of size 12 free'd
      ==24322== at 0x4025907: operator delete(void*) (vg_replace_malloc.c:387)
      ==24322== by 0x409EAD9: QQmlEngine::~QQmlEngine() (qqmlengine.cpp:551)
      ==24322== by 0x8067DD3: tst_qqmlproperty::crashOnValueProperty() (tst_qqmlproperty.cpp:1553)
      ==24322== by 0x806B131: tst_qqmlproperty::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) (tst_qqmlproperty.moc:325)
      ==24322== by 0x55679F2: QMetaMethod::invoke(QObject*, Qt::ConnectionType, QGenericReturnArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument) const (qmetaobject.cpp:1642)
      ==24322== by 0x5566FA6: QMetaObject::invokeMethod(QObject*, char const*, Qt::ConnectionType, QGenericReturnArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument) (qmetaobject.cpp:1168)
      ==24322== by 0x47415B1: QMetaObject::invokeMethod(QObject*, char const*, Qt::ConnectionType, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument) (qobjectdefs.h:393)
      ==24322== by 0x473DACC: QTest::qInvokeTestMethodDataEntry(char*) (qtestcase.cpp:1533)
      ==24322== by 0x473E290: QTest::qInvokeTestMethod(char const*, char const*) (qtestcase.cpp:1650)
      ==24322== by 0x473EA7E: QTest::qInvokeTestMethods(QObject*) (qtestcase.cpp:1804)
      ==24322== by 0x473EF71: QTest::qExec(QObject*, int, char**) (qtestcase.cpp:2023)
      ==24322== by 0x806AB3E: main (tst_qqmlproperty.cpp:1719)
      ==24322==

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            paeglis Gatis Paeglis
            kenthans Kent Hansen (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes