Fix crash when writing property after engine deletion

Previously, the engine pointer stored in a QQmlProperty could be
stale due to engine deletion.  This commit ensures we guard that
pointer.

Also reverts cbb7f8b10e99fad675839d7625d3236ed67b3e01

Task-number: QTBUG-24734
Change-Id: I5349c51fbd19fa46a8710280173c1d224358b96e
Reviewed-by: Michael Brasser <michael.brasser@nokia.com>